# Secuserve-WebInterface-module

./: .gitattributes  README copy.md  README.md  dev.sh  pyproject.toml
.circleci/: config.yml
SecuServeWebApp/: config.py
SecuServeWebApp/app/base/: const.py  data_updater.py  forms.py  routes.py
SecuServeWebApp/app/base/templates/includes/: chartscripts.html  scripts.html
SecuServeWebApp/app/base/templates/layouts/: dashbase.html
Secuserve-WebInterface-module/: .gitignore  Dockerfile  config.py  requirements.txt  run.py
Secuserve-WebInterface-module/app/: __init__.py
Secuserve-WebInterface-module/app/base/: Config.ini  const.py  datestruct.py  models.py  routes.py
Secuserve-WebInterface-module/app/base/templates/accounts/: login.html
Secuserve-WebInterface-module/app/base/templates/includes/: sidebar.html
Secuserve-WebInterface-module/app/base/templates/layouts/: base.html  dashbasewithgraph.html
Secuserve-WebInterface-module/app/home/templates/: dash.html  seen.html  set.html
Webinterface/: Config.ini  __main__.py  config.py  run.py  startweb.sh
Webinterface/app/: __init__.py  const.py
Webinterface/app/base/: const.py  forms.py  models.py  routes.py  userData.py
Webinterface/app/base/templates/accounts/: register.html
Webinterface/app/base/templates/includes/: chartscripts.html  footer.html  navigation.html  scripts.html  sidebar.html
Webinterface/app/home/templates/: addFace.html  dash.html  dashboard.html  index.html  set.html  settings.html  sign-in.html
Webinterface/web/: Config.ini
Webinterface/web/app/base/: models.py
(+2 files in other folders)
