[tool.poetry]
name = "secuserve-webinterface-module"
version = "0.1.0"
description = "the web server and module of the SecuServe Securty System"
authors = ["NicholasBlackburn1 <nickblackburn02@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
flask_login = "0.5.0"
flask_migrate = "2.7.0"
Flask-WTF = "^0.15.1"

email-validator = "^1.1.3"
python-decouple = "^3.5"
gunicorn = "^20.1.0"
Jinja2 = "^3.0.2"
Turbo-Flask = "^0.6.1"
celery = "^5.1.2"
requests = "^2.26.0"
Flask-SQLAlchemy = "2.4.4"
SQLAlchemy = "1.3.23"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
